--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -10,8 +10,8 @@ interface Props {
 }
 
 const { 
-	title = 'MOUntos', 
-	description = 'Official website of MOUntos Institute' 
+	title = 'Mountos codeLab', 
+	description = 'A live repository of AI, ML, and game development projects.' 
 } = Astro.props;
 
 const isHomepage = Astro.url.pathname === '/';
