--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,8 +1,8 @@
 ---
 const { 
   isHomepage = false,
-	siteTitle = "Your Website", 
-	siteDescription = "A short description of your website."
+	siteTitle, 
+	siteDescription
 } = Astro.props;
 ---
 <header>
