--- a/src/layouts/BlogPostLayout.astro
+++ b/src/layouts/BlogPostLayout.astro
@@ -165,7 +165,7 @@ const primaryCategory = frontmatter.categories?.[0];
   .content {
     font-size: 1.1rem;
     line-height: 1.8;
-    color: var(--color-text-light);
+    color: white;
   }
 
   .post-footer {
