--- a/src/pages/projects/ghosturl.astro
+++ b/src/pages/projects/ghosturl.astro
@@ -14,14 +14,14 @@ import Layout from '../../layouts/Layout.astro';
     </div>
     
     <div class="ascii-art">
-        <pre>
+        <pre>{`
    _____ _               _    _   _ _____ _      
   / ____| |             | |  | | | |_   _| |     
  | |  __| |__   ___  ___| | _| | | | | | | |     
  | | |_ | '_ \ / _ \/ __| |/ / | | | | | | |     
  | |__| | | | |  __/ (__|   <| |_| |_| |_| |____ 
-  \_____|_| |_|\___|\___|_|\_\\___/|_____|______| 
-        </pre>
+  \_____|_| |_|\___|\___|_|\_\\___/|_____|______|
+        `}</pre>
     </div>
     
     <div class="input-section">
