--- a/src/pages/projects/ghosturl/index.astro
+++ b/src/pages/projects/ghosturl/index.astro
@@ -1,5 +1,5 @@
 ---
-import Layout from '../../layouts/Layout.astro';
+import Layout from '../../../layouts/Layout.astro';
 ---
 <Layout 
   title="GhostURL - Zero-Width URL Generator | Mountos codeLab"
