--- a/src/pages/search.astro
+++ b/src/pages/search.astro
@@ -4,6 +4,7 @@ import Layout from '../layouts/Layout.astro';
 ---
 <Layout title="Search | MOUntos">
   <main>
+    <h1>Search</h1>
     <div id="search" class="search-container"></div>
   </main>
   <style>
