--- a/src/pages/blog/[slug].astro
+++ b/src/pages/blog/[slug].astro
@@ -13,6 +13,6 @@ export async function getStaticPaths() {
 const post = Astro.props;
 const { Content, headings } = await post.render();
 ---
-<BlogPostLayout frontmatter={post.data} headings={headings}>
+<BlogPostLayout frontmatter={post.data} headings={headings} slug={post.slug}>
   <Content />
 </BlogPostLayout>
